--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -2222,7 +2222,7 @@
     "tags": []
    },
    "source": [
-    "DISCLAIMER: It is important to note that the obseravtions and finding sfrom this paper are correlative obseravtions and not causal. We did not prove causality for any of the following findings. Additionally, due to some vulgar language, we had to edit the wordclouds to be presentable.\n",
+    "DISCLAIMER: It is important to note that the obseravtions and findings from this paper are correlative obseravtions and not causal. We did not prove causality for any of the following findings. Additionally, due to some vulgar language, we had to edit the wordclouds to be presentable.\n",
     "\n",
     "#### NORP Entity wordclouds for 1970 and 2010s\n",
     "\n",
@@ -2254,7 +2254,7 @@
    "source": [
     "#### \n",
     "\n",
-    "PERSON stands for `Person, including fictional`. We had chosen 3 time periods the 1960s, 2000s, and 2010s. The greatest entitiy occurrence in the 1960s was `rhonda`, with references to `louielouie`, and names such as `hazel`, `simon`, `jimmy`, and `hazel`. For both the 2000s and 2010s, `dj` has the greatest entity occurence. Other interesting entities to note in the 2000s are `jackson`, and in 2010s `nicki`, `keisha`, and `timmyturner`. Our hypothesis for why `dj` has the greatest entity occurence is that this coincides with `dj` being a prefix for many artists names, following the rise of rap music.\n",
+    "PERSON stands for `Person, including fictional`. We had chosen 3 time periods the 1960s, 2000s, and 2010s. The greatest entitiy occurrence in the 1960s was `rhonda`, with references to `louielouie`, and names such as `hazel`, `simon`, `jimmy`, and `hazel`. For both the 2000s and 2010s, `dj` has the greatest entity occurence. Other interesting entities to note in the 2000s are `jackson`, and in 2010s `nicki`, `keisha`, and `timmyturner`. Our hypothesis for why `dj` has the greatest entity occurence is that this coincides with `dj` being a prefix for many artists names, following the rise of rap music. Our hypothesis for why `rhonda` has the greatest entity occurence is that this coincides with the tv-star Rhonda Fleming.\n",
     "\n",
     "It's interesting to note that `jesus` occurs in all 3 decade periods.\n",
     "\n",
@@ -2277,6 +2277,16 @@
    "cell_type": "markdown",
    "id": "f6f38b6b",
    "metadata": {},
+   "source": [
+    "Our findings seems fairly intuitive based on our initial understanding of the problem. However, there are definitely limitations with our approach to using NER to identify trends. The SpaCy model did not perform as we had expected it to be with some entities being incorrectly tagged. Additionally, we had expected more explicit trends and references with time period such as `vietnam` as a GPE or EVENTS to show up in the 1960s/1970s data due to the Vietnam War, however, there were no outstanding trends to note. For more pertinent data around world events, we thought of using a different data source such as newspaper headlines which may give us better results. We also hope to explore different modeling techniques which may yield better results in identifying themes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e27280-2a23-4ee3-b4c5-829c69b4da49",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
