finish expletives plot

--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -330,6 +330,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8adb355-5224-4ea0-936c-46641b0ca8cc",
    "metadata": {},
@@ -338,7 +339,7 @@
     "\n",
     "For our model, we used an off-the-shelf trained NER model, spaCy. we only ingested the `lyrics` and `decade` columns from the spotify song/lyric data as inputs. The purpose of our model was to extract different types of entities from song lyrics by decade to see if there were any noticeable trends. The original intended use of the dataset was extracted from another song lyric analysis project, which had filtered and cleaned its data consisting of Billboard Year-End Hot 100 Singles from 1965 - 2015.\n",
     "\n",
-    "JUSTIN & SYDNEY ADD STUFF HERE ABOUT YOUR TRAINING DATA/MODEL"
+    "**JUSTIN & SYDNEY ADD STUFF HERE ABOUT YOUR TRAINING DATA/MODEL**"
    ]
   },
   {
