added information about toxic bert to report

--- a/expletives.ipynb
+++ b/expletives.ipynb
@@ -40,7 +40,8 @@
     "from scipy.spatial.distance import cosine\n",
     "import torch\n",
     "from transformers import BertTokenizer, BertModel\n",
-    "from sentence_transformers import SentenceTransformer, util\n"
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -92,7 +93,7 @@
     }
    ],
    "source": [
-    "!pip install transformers\n",
+    "%pip install transformers\n",
     "nltk.download('stopwords')"
    ]
   },
