--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -55,6 +55,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8e38b28",
+   "metadata": {},
+   "source": [
+    "Our project focuses on English song lyrics derived from Spotify covering the period of 1960-2015. Our motivation comes from the cultural information encoded in these lyrics. We're interested to learn what the art our society has produced says about what it finds important or cultural relevant, as well to track how much it changes over time. Additionally, we each are Spotify users and love to listen to music. Thus, we decided to combine our personal interests in music with natural language processing in attempt to gain insights in our popular culture."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "0c11cded-37ba-4da3-bc50-2c96832aed86",
@@ -375,7 +383,7 @@
     "\n",
     "From our corpus, we only used the `lyrics` and `decade` labels as inputs. The outputs are a set of entities linked to each set of lyrics, which is in turn grouped into dicts by the `decade` label.\n",
     "\n",
-    "*How was spacy trained and why did we use it? Provide justification for why you believe the off-the-shelf model is appropriate for your use case.*"
+    "We decided to use the off the shelf spaCy model because the entities we are looking for are not niche categories or specific jargon. The default entities that spaCy identifies, particularly NORP, PRODUCT, PERSON, are exactly what we need for trend analysis."
    ]
   },
   {
