readded model 2 information

--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -359,9 +359,9 @@
    "source": [
     "### Training Data\n",
     "\n",
-    "For our model, we used an off-the-shelf trained NER model, spaCy. we only ingested the `lyrics` and `decade` columns from the spotify song/lyric data as inputs. The purpose of our model was to extract different types of entities from song lyrics by decade to see if there were any noticeable trends. The original intended use of the dataset was extracted from another song lyric analysis project, which had filtered and cleaned its data consisting of Billboard Year-End Hot 100 Singles from 1965 - 2015.\n",
+    "For our first model, we used an off-the-shelf trained NER model, spaCy. we only ingested the `lyrics` and `decade` columns from the spotify song/lyric data as inputs. The purpose of our model was to extract different types of entities from song lyrics by decade to see if there were any noticeable trends. The original intended use of the dataset was extracted from another song lyric analysis project, which had filtered and cleaned its data consisting of Billboard Year-End Hot 100 Singles from 1965 - 2015.\n",
     "\n",
-    "**JUSTIN & SYDNEY ADD STUFF HERE ABOUT YOUR TRAINING DATA/MODEL**"
+    "For our second model, we used a fine-tuned BERT model called 'toxic-bert' to gauge how profane the the lyrics of certain songs were. This model was fine-tuned  using Wikipedia comments and the archive of an independent commenting website called Civil Comments. Each comment was given a human rated toxicity rating, and the model was trained to predict how toxic a given comment was based on these ratings."
    ]
   },
   {
@@ -393,6 +393,16 @@
    "metadata": {},
    "source": [
     "### Model Architecture 2: Toxic BERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb352575",
+   "metadata": {},
+   "source": [
+    "Our second model uses a fine-tuned BERT model, `toxic-bert` to compare how similarly toxic lyrics of songs were across decades. We used the toxic BERT model to predict the toxicity of each song in our corpus by first grouping songs by decade, then retrieving the embeddings for songs per decade using `lyrics` as input. We then found the mean of each decade's embeddings, and compared them through cosine similarity.\n",
+    "\n",
+    "We believed that a fine-tuned BERT model was appropriate for our case as we needed some way to gauge the toxicity/profanity of lyrics, and when doing on research on various models available we found this one that was already trained on a large corpus of toxic comments, which we believed would be a good proxy for profane lyrics. This model can provide outputs of toxicity labels given a document ranging from \"Very Toxic,\" \"Toxic,\" \"Hard to Say,\" and \"Not Toxic.\""
    ]
   },
   {
