add member portion, fix dates

--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "19717764-612d-4e35-85d3-7b700b4f38ed",
    "metadata": {
@@ -16,7 +15,8 @@
    "id": "e1ee6bce-a867-4bb6-895b-716ada36a428",
    "metadata": {},
    "source": [
-    "### Group 6 | Max Bennett, Sydney Castillo, Justin Tham, Ian Wang | 12th December 2023"
+    "### Group 6 | Max Bennett, Sydney Castillo, Justin Tham, Ian Wang | 12th December 2023\n",
+    "[Repository Link](https://github.com/maxmiles/info498b_lyrics_analysis/tree/main)"
    ]
   },
   {
@@ -46,7 +46,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "65bae1e7-fab7-4669-8cc3-d54827b21e97",
    "metadata": {},
@@ -59,17 +58,16 @@
    "id": "e8e38b28",
    "metadata": {},
    "source": [
-    "Our project focuses on English song lyrics derived from Spotify covering the period of 1960-2015. Our motivation comes from the cultural information encoded in these lyrics. We're interested to learn what the art our society has produced says about what it finds important or cultural relevant, as well to track how much it changes over time. Additionally, we each are Spotify users and love to listen to music. Thus, we decided to combine our personal interests in music with natural language processing in attempt to gain insights in our popular culture."
+    "Our project focuses on English song lyrics derived from Spotify covering the period of 1965-2017. Our motivation comes from the cultural information encoded in these lyrics. We're interested to learn what the art our society has produced says about what it finds important or cultural relevant, as well to track how much it changes over time. Additionally, we each are Spotify users and love to listen to music. Thus, we decided to combine our personal interests in music with natural language processing in attempt to gain insights in our popular culture."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c11cded-37ba-4da3-bc50-2c96832aed86",
    "metadata": {},
    "source": [
     "## Corpus\n",
-    "The data corpus contains song data and their lyrics from 2965 to 2015. We are working from a curated dataset from another project we had found online at this [repo](https://github.com/zhao1701/spotify-song-lyric-analysis/tree/master#building-the-dataset). Below is a small sample of what the data looks like, including its column names."
+    "The data corpus contains song data and their lyrics from 1965 to 2017. We are working from a curated dataset from another project we had found online at this [repo](https://github.com/zhao1701/spotify-song-lyric-analysis/tree/master#building-the-dataset). Below is a small sample of what the data looks like, including its column names."
    ]
   },
   {
@@ -343,7 +341,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31654fb6",
    "metadata": {},
@@ -352,7 +349,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b8adb355-5224-4ea0-936c-46641b0ca8cc",
    "metadata": {},
@@ -369,7 +365,8 @@
    "id": "953529d5-c792-4b1f-9e13-970ce1c4aa27",
    "metadata": {},
    "source": [
-    "### Model Architecture 1: NER"
+    "### Model Architecture 1: NER\n",
+    "#### Member Responsible: Max"
    ]
   },
   {
@@ -379,20 +376,18 @@
    "source": [
     "The first model uses Named Entity Recognition to identify how the subjects discussed in our corpus change across decades. We primarily tracked the entities of location, nationiality/religious group, product, event, person, organization, and geopolitical event. We found that these entities tend to have a combination of enough data, interesting results, and unique enough results. \n",
     "\n",
-    "We tried multiple spaCy models when testing our code, but ulitmately landed on `en_core_web_lg`, which we determined found the most relevant entities. We filtered our corpus by decade and then applied this model to each set of lyrics in our corpus. Next, we filtered out the entities that had no relevance to our project, such as ordinals and times. Using the remaining entities, we created wordclouds for each (decade, entity) pair. \n",
+    "We tried multiple spaCy models when testing our code, but ulitmately landed on `en_core_web_lg`, which we determined found the most relevant entities. We decided to use the off the shelf spaCy model because the entities we are looking for are not niche categories or specific jargon. The default entities that spaCy identifies, particularly NORP, PRODUCT, and PERSON are exactly what we need for trend analysis. We filtered our corpus by decade and then applied this model to each set of lyrics in our corpus. Next, we filtered out the entities that had no relevance to our project, such as ordinals and times. Using the remaining entities, we created wordclouds for each (decade, entity) pair. \n",
     "\n",
-    "From our corpus, we only used the `lyrics` and `decade` labels as inputs. The outputs are a set of entities linked to each set of lyrics, which is in turn grouped into dicts by the `decade` label.\n",
-    "\n",
-    "We decided to use the off the shelf spaCy model because the entities we are looking for are not niche categories or specific jargon. The default entities that spaCy identifies, particularly NORP, PRODUCT, PERSON, are exactly what we need for trend analysis."
+    "From our corpus, we only used the `lyrics` and `decade` labels as inputs. The outputs are a set of entities linked to each set of lyrics, which is in turn grouped into dicts by the `decade` label."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a5a96d99-828b-4e54-9665-60baeec596ad",
    "metadata": {},
    "source": [
-    "### Model Architecture 2: Toxic BERT"
+    "### Model Architecture 2: Toxic BERT\n",
+    "#### Member Responsible: Justin"
    ]
   },
   {
@@ -406,7 +401,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0e9c215f-96fa-4d11-a201-8be495f9c616",
    "metadata": {},
@@ -415,12 +409,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9b9ade09",
    "metadata": {},
    "source": [
     "### Model 1: NER Results\n",
+    "#### Member Responsible: Ian Wang\n",
     "\n",
     "Our initial question was what are the noticable trends about entities that we can observably see by decade from the corpus of song lyrics? We created  word clouds by entity by decade to answer the question. For a good portion of the lyric entity extracts, there were not any interesting findings. Below we've included summary statistics and extracted some of the interesting trends and findings we had."
    ]
@@ -2302,12 +2296,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aeb7f2ff",
    "metadata": {},
    "source": [
     "### Model 2: Toxic BERT Results\n",
+    "#### Member Responsible: Sydney\n",
     "\n",
     "#### Load BERT model and get song embeddings"
    ]
@@ -2337,7 +2331,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "66fa493a",
    "metadata": {},
@@ -2367,7 +2360,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fe38bcf9",
    "metadata": {},
@@ -2402,7 +2394,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f6f38b6b",
    "metadata": {},
@@ -2413,7 +2404,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b4e27280-2a23-4ee3-b4c5-829c69b4da49",
    "metadata": {},
