made a few wording changes

--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -2404,6 +2404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b4e27280-2a23-4ee3-b4c5-829c69b4da49",
    "metadata": {},
@@ -2412,11 +2413,11 @@
     "\n",
     "For question and model two, we found that the use of explicit language remained similar amongst the first half of the decades we examined, and the second half. For instance, the top-left quadrant of the heatmap indicates that the mean embeddings computed by Toxic BERT are all very similar to each other, with differences between decades 1960-1980 differing by less than 0.01. Alternatively, there is more variation between decades 1990-2010, though all three decades are much more similar to each other than they are to decades 1960-1980. \n",
     "\n",
-    "To further illustrate the similarities between the first and last half of examined decades, through the produced wordclouds, we see that the most common “bad words” in songs released 1960-1989 are “fire,” “babe,” “girls,” and “die.” There is a stark change with songs released 1990-2019, where the most commonly identified “bad words” are much more vulgar, and between decades, very similar to each other.\n",
+    "To further illustrate the similarities between the first and last half of examined decades, through the produced wordclouds, we see that the most common “bad words” in songs released 1960-1989 are “fire,” “babe,” “girls,” and “die.” There is a stark change with songs released 1990-2019, where the most commonly identified “bad words” are much more vulgar, and between decades, very similar to each other. Note that since we were unable to extract entities BERT characterized as \"Very Toxic,\" \"Toxic,\" \"Hard to Say,\" or \"Not Toxic\", we employed a text file of \"bad words\" that was collected by Carnegie Mellon's Computer Science department in order to extract these entities.\n",
     "\n",
     "Overall, we believe that these findings are intuitive to our initial understanding of the problem. It makes sense that language in popular music has become more vulgar over the last few decades, especially since rap was the best-selling genre in the ‘90s.\n",
     "\n",
-    "Regarding our KMeans Clustering plot, it appears that with the number of clusters we chose (k=5), the model was best able to predict and cluster songs that were released anywhere from 2010-2019. We found that although clusters two, three, and four (note, cluster zero = one) were all compacted towards the left of the plot, it appears that the embeddings after PCA did not provide enough information to cleanly differentiate the songs into clusters. This dataset had around 5,000 songs so we would be interested to see if we can finer tune the BERT model, as well as the KMeans algorithm in order to produce cleaner clustering."
+    "Regarding our KMeans Clustering plot, it appears that with the number of clusters we chose (k=5), we found that although clusters two, three, and four (note, cluster zero = one) were all compacted towards the left of the plot, it appears that the embeddings after PCA did not provide enough information to cleanly differentiate the songs into clusters. This dataset had around 5,000 songs so we would be interested to see if we can finer tune the BERT model, as well as the KMeans algorithm in order to produce cleaner clustering."
    ]
   }
  ],
