--- a/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
+++ b/ianuw_maxmiles_scast26_jtham_finalproj.ipynb
@@ -2331,6 +2331,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb086bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toxic BERT produced embeddings for 5516 songs.\n",
+      "average number of dimensions per song is 768.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_songs = 0\n",
+    "total_dimensions = 0\n",
+    "\n",
+    "for decade in decade_embeddings:\n",
+    "    num_songs += len(decade_embeddings[decade])\n",
+    "    for i in range(len(decade_embeddings[decade])):\n",
+    "        total_dimensions += len(decade_embeddings[decade][i])\n",
+    "\n",
+    "print(f'Toxic BERT produced embeddings for {num_songs} songs.')\n",
+    "print(f'average number of dimensions per song is {total_dimensions/num_songs}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "66fa493a",
    "metadata": {},
